--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@astrojs/react": "^4.3.0",
     "@lucide/astro": "^0.542.0",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
